# botan-docs

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.txt  README.md  mono.code-workspace  requirements.txt
.github/environment/: botan.env
.github/resources/: jack-botan-release-key.gpg  rene-commit-signing-key.gpg
.github/scripts/: ci_build.py  query_rate_limit.sh  read_environment.py
.github/workflows/: auto-update.yml  ci.yml  release.yml
_ext/: botan_src_path.py
architecture/: 01_architecture.rst  conf.py  index.rst  requirements-dev.in  requirements.in
architecture/src/: 01_architecture.rst  conf.py
audit_generator/: README.md  audit.py  requirements.txt  topic-schema.json
audit_generator/genaudit/: __init__.py  audit.py  cache.py  refs.py  render.py  repo.py  topic.py  util.py  verify.py
audit_method/src/: 00_09_introduction.rst  01_change_tracking.rst  03_sidechannel_analysis.rst  04_testsuite.rst  06_summary.rst  90_references.rst  conf.py  index.rst
audit_report/3.0.0/: README.md
audit_report/3.1.0/: requirements.txt
auxiliary_documents/: hybrid_tls_approaches.rst
codebase_exports/source_archive/: generate.py
config/: auditors.yml  botan.env
cryptodoc/: README.md  requirements.in  requirements.txt
cryptodoc/src/: 00_00_preface.rst  00_01_changelog.rst  01_hash.rst  02_sym_enc.rst  03_mac.rst  04_prim_generation.rst  05_pubkey_param.rst  06_pubkey_key_generation.rst  07_pubkey.rst  08_signatures.rst  09_rng.rst  11_x509.rst  12_kdf.rst  13_pbkdf.rst  90_bibliographie.rst  conf.py
docs/architecture/: README.md  pyproject.toml
docs/architecture/src/: 00_preface.rst  01_architecture.rst  conf.py  index.rst
docs/audit_method/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/audit_method/src/: 00_00_preface.rst  00_01_changelog.rst  01_change_tracking.rst  02_source_analysis.rst  03_sidechannel_analysis.rst  05_doc_updates.rst  06_summary.rst  90_references.rst  conf.py
docs/audit_report/: Makefile  README.md  pyproject.toml
docs/audit_report/changes/: config.yml
docs/audit_report/changes/topics/: additions.yml  auxiliary_scripts.yml  build.yml  build_system.yml  chore.yml  chores.yml  chores_sensitive.yml  ci.yml  ci_tests.yml  clang_format.yml  classic_mceliece.yml  cli.yml  code_chore.yml  code_chores.yml  continuous_integration.yml  crystals.yml  ct_helpers.yml  doc_release.yml  documentation.yml  ecc.yml  encoding.yml  extensions.yml  ffi.yml  fixes.yml  fixes_x509.yml  hss_lms.yml  keccak.yml  kuznyechik.yml  multiprecision_integers.yml  new_algos.yml  optimization.yml  optimizations.yml  pcurve.yml  pcurves.yml  pki.yml  pqc.yml  python.yml  release.yml  removals.yml  rng.yml  (+10 more)
docs/audit_report/scripts/: audited_modules_list.py
docs/audit_report/src/: 00_00_preface.rst  00_09_introduction.rst  01_generic_changes.rst  02_security_issues.rst  05_documents.rst  05_summary.rst  06_bibliography.rst  conf.py  custom.sty  index.rst
docs/audit_report/src/side_channels/: 00_data.rst  00_introduction.rst  01_00_results.rst  01_01_cmce.rst  01_01_lms.rst  01_01_pq_tls.rst  01_02_frodokem.rst  01_02_ml_dsa.rst  01_02_x25519.rst  01_03_ml_kem.rst  01_04_slh_dsa.rst  01_XX_cmce.rst  02_00_literature.rst  02_01_kyber.rst  02_02_dilithium.rst  02_04_sphincsplus.rst  02_results.rst  index.rst
docs/cryptodoc/: Makefile  pyproject.toml  requirements-dev.txt
docs/cryptodoc/src/: 00_00_preface.rst  00_01_changelog.rst  00_09_Introduction.rst  01_hash.rst  02_sym_enc.rst  03_mac.rst  04_prim_generation.rst  05_00_pubkey.rst  05_01_dh.rst  05_02_dsa.rst  05_03_ecc.rst  05_04_rsa.rst  05_05_xmss.rst  05_06_hss_lms.rst  05_06_spx.rst  05_07_dilithium.rst  05_07_slh_dsa.rst  05_07_spx.rst  05_08_dilithium.rst  05_08_kyber.rst  05_08_ml_dsa.rst  05_09_frodokem.rst  05_09_kyber.rst  05_09_ml_kem.rst  05_10_cmce.rst  05_10_frodokem.rst  05_11_cmce.rst  06_hpke.rst  07_rng.rst  09_x509.rst  10_kdf.rst  10_tpm.rst  11_kdf.rst  90_bibliographie.rst  conf.py  index.rst
docs/hybrid_tls_approaches/: poetry.toml
docs/testreport/: Makefile  README.md  bsi_test_report.py  pyproject.toml  test_properties.patch  testreport_preamble.rst
docs/testreport/scripts/: bsi_test_report.py
docs/testreport/src/: 00_00_preface.rst  00_09_introduction.rst  conf.py  index.rst
docs/testspec/: pyproject.toml
internal/: release_checklist.md  update_poetry.sh
ms41_side_channel_report/: README.md
ms41_side_channel_report/src/: 00_00_preface.rst  00_09_introduction.rst  01_data.rst  02_02_dilithium.rst  02_03_xmss.rst  02_results.rst  90_references.rst  conf.py  index.rst
resources/coverpage_de/: custom_coverpage.sty
resources/coverpage_en/: custom_coverpage.sty
src/: 00_00_preface.rst  03_mac.rst  05_pubkey_param.rst  06_pubkey_key_generation.rst  07_pubkey.rst  08_signatures.rst  10_entropy.rst  12_kdf.rst  90_bibliographie.rst  conf.py  index.rst
testspec/: README.md  requirements-dev.txt  requirements.txt  richtext_table_converter.py
testspec/src/: 00_00_preface.rst  00_09_introduction.rst  01_aead.rst  02_cert_store.rst  03_block_ciphers.rst  04_entropy_srcs.rst  05_hash.rst  06_kdf.rst  07_mac.rst  08_modes_of_operation.rst  09_pbkdf.rst  10_pkcs11.rst  11_pubkey_enc.rst  12_pubkey_kem.rst  13_pubkey_agree.rst  14_pubkey_sig.rst  15_rng.rst  16_tls.rst  17_x509.rst  conf.py
tools/: bsi_test_report.py
tools/audit_generator/: requirements.txt
tools/auditinfo/: README.md  pyproject.toml
tools/auditinfo/auditinfo/: __init__.py  auditor.py  base.py  botan.py  document.py
tools/auditupdate/: README.md  pyproject.toml
tools/auditupdate/auditupdate/: cli.py
tools/genaudit/: README.md  pyproject.toml
tools/genaudit/genaudit/: __init__.py  audit.py  base.py  cli.py  refs.py  render.py  repo.py  topic.py  util.py  verify.py
tools/genaudit/genaudit/templates/: index.rst  macros.rst  topic.rst
tools/sharedimg/: pyproject.toml
tools/sharedimg/sharedimg/: __init__.py
tools/sourceref/: pyproject.toml
tools/sourceref/sourceref/: __init__.py  role.py
tools/tarball_checker/: check.py  pyproject.toml
(+94 files in other folders)
