[tool.poetry]
name = "audit_method"
version = "1.0.0"
description = "Describes the process we use to audit changes in the Botan library"
authors = ["Fabian Albert <fabian.albert@rohde-schwarz.com>","René Fischer <rene.fischer@rohde-schwarz.com>","Philippe Lieser <philippe.lieser@rohde-schwarz.com","René Meusel <rene.meusel@rohde-schwarz.com>","Amos Treiber <amos.treiber@rohde-schwarz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"
pylatexenc = "^2.10"

[tool.poetry.dev-dependencies]
esbonio = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
