[tool.poetry]
name = "test_report"
version = "1.0.0"
description = "Collects Botan's test outputs and renders them into a document"
authors = ["Fabian Albert <fabian.albert@rohde-schwarz.com>", "René Meusel <rene.meusel@rohde-schwarz.com>", "Philippe Lieser <philippe.lieser@rohde-schwarz.com"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"
pylatexenc = "^2.10"
junitparser = "^3.1"

genaudit = { path = "../../tools/genaudit", develop = true }
sourceref = { path = "../../tools/sourceref", develop = true }

[tool.poetry.dev-dependencies]
esbonio = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
