[tool.poetry]
name = "auditinfo"
version = "0.1.0"
description = "Central information retrieval of this audit project"
authors = ["René Meusel <rene.meusel@rohde-schwarz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
