[tool.poetry]
name = "auditupdate"
version = "0.1.0"
description = "Gather information about unaudited upstream patches"
authors = ["René Meusel <rene.meusel@rohde-schwarz.com>"]

[tool.poetry.dependencies]
python = "^3.10"

pygithub = "~1.59"
pyyaml = "^6.0"
Jinja2 = "^3.0"

auditinfo = { path = "../auditinfo", develop = true }
genaudit = { path = "../genaudit", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
