[tool.poetry]
name = "sharedimg"
version = "0.1.0"
description = "Sphinx extension to conveniently place images that are shared across documents"
authors = ["René Meusel <rene.meusel@rohde-schwarz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"

auditinfo = { path = "../auditinfo", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
