[tool.poetry]
name = "tarball_checker"
version = "0.1.0"
description = "Program to download the official release source archive and compare it to the repository contents"
authors = ["René Meusel <rene.meusel@rohde-schwarz.com>"]

[tool.poetry.dependencies]
python = "^3.10"

auditinfo = { path = "../auditinfo", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
